project(Library)
set(CMAKE_CXX_STANDARD 20)
add_library(SqlStatement STATIC lib/SqlStatement.cpp)
add_library(SelectStatement STATIC lib/SelectStatement.cpp)
add_library(InsertStatement STATIC lib/InsertStatement.cpp)
add_library(DropTableStatement STATIC lib/DropTableStatement.cpp)
add_library(DeleteStatement STATIC lib/DeleteStatement.cpp)
add_library(Parser STATIC lib/Parser.cpp)
add_library(CreateTableStatement STATIC lib/CreateTableStatement.cpp)
add_library(NewLexer STATIC lib/NewLexer.cpp)
add_library(Visitor STATIC lib/Visitor.cpp)
# set_compile_options(lib)