add_executable(main project/main.cpp)
target_include_directories(main PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../external/cli11/include/CLI)
target_include_directories(main PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../lib/lib)
target_link_libraries(main SqlStatement)
target_link_libraries(main lexor)
target_link_libraries(main SelectStatement)
target_link_libraries(main InsertStatement)
target_link_libraries(main DropTableStatement)
target_link_libraries(main DeleteStatement)
target_link_libraries(main CreateTableStatement)
target_link_libraries(main CLI11::CLI11)
target_link_libraries(main NewLexer)
target_link_libraries(main Error)
set_compile_options(main)
